--- a/WebBrowser/Base.lproj/Main.storyboard
+++ b/WebBrowser/Base.lproj/Main.storyboard
@@ -56,26 +56,53 @@
                                 </connections>
                             </button>
                             <webView contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="XD4-cr-q9D">
-                                <rect key="frame" x="0.0" y="0.0" width="375" height="627"/>
+                                <rect key="frame" x="0.0" y="60" width="375" height="567"/>
                                 <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                             </webView>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="right" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="hO1-5q-5xx">
+                                <rect key="frame" x="325" y="20" width="40" height="40"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="40" id="U9i-Qg-XBL"/>
+                                    <constraint firstAttribute="width" constant="40" id="cwY-7Q-4d1"/>
+                                </constraints>
+                                <state key="normal" title="搜索"/>
+                                <connections>
+                                    <action selector="gotoWebSiteAction:" destination="BBr-5g-VNy" eventType="touchUpInside" id="J91-Dn-izo"/>
+                                </connections>
+                            </button>
+                            <textField opaque="NO" clipsSubviews="YES" alpha="0.65000000000000002" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="center" minimumFontSize="17" clearButtonMode="whileEditing" translatesAutoresizingMaskIntoConstraints="NO" id="l7O-JO-AHP">
+                                <rect key="frame" x="10" y="25" width="313" height="30"/>
+                                <color key="backgroundColor" white="0.0" alpha="1" colorSpace="calibratedWhite"/>
+                                <color key="tintColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="30" id="b1Z-XQ-5Hg"/>
+                                </constraints>
+                                <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                                <fontDescription key="fontDescription" name="HiraginoSans-W6" family="Hiragino Sans" pointSize="14"/>
+                                <textInputTraits key="textInputTraits" keyboardType="URL" keyboardAppearance="alert" returnKeyType="go" enablesReturnKeyAutomatically="YES"/>
+                            </textField>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
                             <constraint firstItem="qrq-2M-X0T" firstAttribute="width" secondItem="M5z-nT-yA7" secondAttribute="width" id="05D-bu-4yJ"/>
+                            <constraint firstItem="XD4-cr-q9D" firstAttribute="top" secondItem="l7O-JO-AHP" secondAttribute="bottom" constant="5" id="10C-Cc-Qg7"/>
                             <constraint firstItem="GOd-Dy-x82" firstAttribute="centerY" secondItem="qrq-2M-X0T" secondAttribute="centerY" id="2tN-fr-FhK"/>
-                            <constraint firstItem="XD4-cr-q9D" firstAttribute="top" secondItem="a75-X3-HcY" secondAttribute="bottom" constant="-20" id="39G-s9-cLR"/>
                             <constraint firstItem="GOd-Dy-x82" firstAttribute="width" secondItem="qrq-2M-X0T" secondAttribute="width" id="41Y-35-Fez"/>
+                            <constraint firstAttribute="trailing" secondItem="hO1-5q-5xx" secondAttribute="trailing" constant="10" id="5MI-pX-pVo"/>
+                            <constraint firstItem="hO1-5q-5xx" firstAttribute="leading" secondItem="l7O-JO-AHP" secondAttribute="trailing" constant="2" id="6wl-Ka-bIG"/>
+                            <constraint firstItem="l7O-JO-AHP" firstAttribute="leading" secondItem="U4n-aD-6uH" secondAttribute="leading" constant="10" id="8nO-Ni-fAA"/>
                             <constraint firstItem="cyI-24-wmc" firstAttribute="top" secondItem="M5z-nT-yA7" secondAttribute="bottom" id="CPx-uG-whu"/>
                             <constraint firstAttribute="trailing" secondItem="XD4-cr-q9D" secondAttribute="trailing" id="DUg-X3-eTA"/>
                             <constraint firstItem="M5z-nT-yA7" firstAttribute="top" secondItem="XD4-cr-q9D" secondAttribute="bottom" id="DyN-1o-6G6"/>
                             <constraint firstItem="4sU-Th-bIQ" firstAttribute="centerY" secondItem="U4n-aD-6uH" secondAttribute="centerY" id="DzB-AR-hou"/>
+                            <constraint firstItem="hO1-5q-5xx" firstAttribute="centerY" secondItem="l7O-JO-AHP" secondAttribute="centerY" id="Gjw-vx-3uJ"/>
                             <constraint firstItem="H4p-CE-drW" firstAttribute="centerY" secondItem="GOd-Dy-x82" secondAttribute="centerY" id="HI6-x1-VWX"/>
                             <constraint firstItem="GOd-Dy-x82" firstAttribute="leading" secondItem="qrq-2M-X0T" secondAttribute="trailing" id="Lrs-Rz-qMh"/>
                             <constraint firstItem="H4p-CE-drW" firstAttribute="leading" secondItem="GOd-Dy-x82" secondAttribute="trailing" id="Nht-7k-Faq"/>
                             <constraint firstItem="4sU-Th-bIQ" firstAttribute="centerX" secondItem="U4n-aD-6uH" secondAttribute="centerX" id="R6P-bq-3QC"/>
                             <constraint firstItem="M5z-nT-yA7" firstAttribute="leading" secondItem="U4n-aD-6uH" secondAttribute="leading" id="Ril-th-8fP"/>
                             <constraint firstItem="H4p-CE-drW" firstAttribute="height" secondItem="GOd-Dy-x82" secondAttribute="height" id="Sih-St-1JM"/>
+                            <constraint firstItem="l7O-JO-AHP" firstAttribute="top" secondItem="U4n-aD-6uH" secondAttribute="top" constant="25" id="TQ4-n7-puH"/>
                             <constraint firstItem="qrq-2M-X0T" firstAttribute="leading" secondItem="M5z-nT-yA7" secondAttribute="trailing" id="ba3-ii-mYI"/>
                             <constraint firstItem="GOd-Dy-x82" firstAttribute="height" secondItem="qrq-2M-X0T" secondAttribute="height" id="iQZ-bc-eFV"/>
                             <constraint firstItem="XD4-cr-q9D" firstAttribute="leading" secondItem="U4n-aD-6uH" secondAttribute="leading" id="n8z-Nv-ypb"/>
@@ -90,6 +117,7 @@
                         <outlet property="activityView" destination="4sU-Th-bIQ" id="aPJ-5A-1hM"/>
                         <outlet property="btnWidthConstraint" destination="gW2-7T-4h6" id="gL9-zt-ycz"/>
                         <outlet property="myWebView" destination="XD4-cr-q9D" id="XPQ-Wh-Ozj"/>
+                        <outlet property="searchTextField" destination="l7O-JO-AHP" id="iI0-aS-Lyl"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="K03-ab-dBW" userLabel="First Responder" sceneMemberID="firstResponder"/>
