--- a/WebBrowser/Base.lproj/Main.storyboard
+++ b/WebBrowser/Base.lproj/Main.storyboard
@@ -17,13 +17,6 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <activityIndicatorView opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" style="gray" translatesAutoresizingMaskIntoConstraints="NO" id="4sU-Th-bIQ">
-                                <rect key="frame" x="168" y="314" width="40" height="40"/>
-                                <constraints>
-                                    <constraint firstAttribute="height" constant="40" id="Dvs-r4-zK8"/>
-                                    <constraint firstAttribute="width" constant="40" id="GAl-9s-Rj3"/>
-                                </constraints>
-                            </activityIndicatorView>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="M5z-nT-yA7">
                                 <rect key="frame" x="0.0" y="627" width="80" height="40"/>
                                 <constraints>
@@ -59,13 +52,13 @@
                                 <rect key="frame" x="0.0" y="60" width="375" height="567"/>
                                 <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                             </webView>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="right" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="hO1-5q-5xx">
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="hO1-5q-5xx">
                                 <rect key="frame" x="325" y="20" width="40" height="40"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="40" id="U9i-Qg-XBL"/>
                                     <constraint firstAttribute="width" constant="40" id="cwY-7Q-4d1"/>
                                 </constraints>
-                                <state key="normal" title="搜索"/>
+                                <state key="normal" image="search"/>
                                 <connections>
                                     <action selector="gotoWebSiteAction:" destination="BBr-5g-VNy" eventType="touchUpInside" id="J91-Dn-izo"/>
                                 </connections>
@@ -81,31 +74,39 @@
                                 <fontDescription key="fontDescription" name="HiraginoSans-W6" family="Hiragino Sans" pointSize="14"/>
                                 <textInputTraits key="textInputTraits" keyboardType="URL" keyboardAppearance="alert" returnKeyType="go" enablesReturnKeyAutomatically="YES"/>
                             </textField>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="xVL-lU-xEF" customClass="NJKWebViewProgressView">
+                                <rect key="frame" x="0.0" y="57" width="375" height="2"/>
+                                <color key="backgroundColor" red="0.96078431372549022" green="0.83529411764705885" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="2" id="nOF-jL-R8T"/>
+                                </constraints>
+                            </view>
                         </subviews>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <color key="backgroundColor" red="0.94117647058823528" green="0.94117647058823528" blue="0.94117647058823528" alpha="1" colorSpace="calibratedRGB"/>
                         <constraints>
                             <constraint firstItem="qrq-2M-X0T" firstAttribute="width" secondItem="M5z-nT-yA7" secondAttribute="width" id="05D-bu-4yJ"/>
                             <constraint firstItem="XD4-cr-q9D" firstAttribute="top" secondItem="l7O-JO-AHP" secondAttribute="bottom" constant="5" id="10C-Cc-Qg7"/>
                             <constraint firstItem="GOd-Dy-x82" firstAttribute="centerY" secondItem="qrq-2M-X0T" secondAttribute="centerY" id="2tN-fr-FhK"/>
                             <constraint firstItem="GOd-Dy-x82" firstAttribute="width" secondItem="qrq-2M-X0T" secondAttribute="width" id="41Y-35-Fez"/>
+                            <constraint firstAttribute="trailing" secondItem="xVL-lU-xEF" secondAttribute="trailing" id="4nt-kd-aH3"/>
                             <constraint firstAttribute="trailing" secondItem="hO1-5q-5xx" secondAttribute="trailing" constant="10" id="5MI-pX-pVo"/>
                             <constraint firstItem="hO1-5q-5xx" firstAttribute="leading" secondItem="l7O-JO-AHP" secondAttribute="trailing" constant="2" id="6wl-Ka-bIG"/>
                             <constraint firstItem="l7O-JO-AHP" firstAttribute="leading" secondItem="U4n-aD-6uH" secondAttribute="leading" constant="10" id="8nO-Ni-fAA"/>
                             <constraint firstItem="cyI-24-wmc" firstAttribute="top" secondItem="M5z-nT-yA7" secondAttribute="bottom" id="CPx-uG-whu"/>
+                            <constraint firstItem="xVL-lU-xEF" firstAttribute="top" secondItem="l7O-JO-AHP" secondAttribute="bottom" constant="2" id="DLb-o7-eTw"/>
                             <constraint firstAttribute="trailing" secondItem="XD4-cr-q9D" secondAttribute="trailing" id="DUg-X3-eTA"/>
                             <constraint firstItem="M5z-nT-yA7" firstAttribute="top" secondItem="XD4-cr-q9D" secondAttribute="bottom" id="DyN-1o-6G6"/>
-                            <constraint firstItem="4sU-Th-bIQ" firstAttribute="centerY" secondItem="U4n-aD-6uH" secondAttribute="centerY" id="DzB-AR-hou"/>
                             <constraint firstItem="hO1-5q-5xx" firstAttribute="centerY" secondItem="l7O-JO-AHP" secondAttribute="centerY" id="Gjw-vx-3uJ"/>
                             <constraint firstItem="H4p-CE-drW" firstAttribute="centerY" secondItem="GOd-Dy-x82" secondAttribute="centerY" id="HI6-x1-VWX"/>
                             <constraint firstItem="GOd-Dy-x82" firstAttribute="leading" secondItem="qrq-2M-X0T" secondAttribute="trailing" id="Lrs-Rz-qMh"/>
                             <constraint firstItem="H4p-CE-drW" firstAttribute="leading" secondItem="GOd-Dy-x82" secondAttribute="trailing" id="Nht-7k-Faq"/>
-                            <constraint firstItem="4sU-Th-bIQ" firstAttribute="centerX" secondItem="U4n-aD-6uH" secondAttribute="centerX" id="R6P-bq-3QC"/>
                             <constraint firstItem="M5z-nT-yA7" firstAttribute="leading" secondItem="U4n-aD-6uH" secondAttribute="leading" id="Ril-th-8fP"/>
                             <constraint firstItem="H4p-CE-drW" firstAttribute="height" secondItem="GOd-Dy-x82" secondAttribute="height" id="Sih-St-1JM"/>
                             <constraint firstItem="l7O-JO-AHP" firstAttribute="top" secondItem="U4n-aD-6uH" secondAttribute="top" constant="25" id="TQ4-n7-puH"/>
                             <constraint firstItem="qrq-2M-X0T" firstAttribute="leading" secondItem="M5z-nT-yA7" secondAttribute="trailing" id="ba3-ii-mYI"/>
                             <constraint firstItem="GOd-Dy-x82" firstAttribute="height" secondItem="qrq-2M-X0T" secondAttribute="height" id="iQZ-bc-eFV"/>
                             <constraint firstItem="XD4-cr-q9D" firstAttribute="leading" secondItem="U4n-aD-6uH" secondAttribute="leading" id="n8z-Nv-ypb"/>
+                            <constraint firstItem="xVL-lU-xEF" firstAttribute="leading" secondItem="U4n-aD-6uH" secondAttribute="leading" id="nTj-Ap-WkP"/>
                             <constraint firstItem="qrq-2M-X0T" firstAttribute="centerY" secondItem="M5z-nT-yA7" secondAttribute="centerY" id="oYn-Rw-62d"/>
                             <constraint firstItem="qrq-2M-X0T" firstAttribute="height" secondItem="M5z-nT-yA7" secondAttribute="height" id="sHl-W1-Okw"/>
                             <constraint firstItem="H4p-CE-drW" firstAttribute="width" secondItem="GOd-Dy-x82" secondAttribute="width" id="szh-co-dbc"/>
@@ -114,15 +115,18 @@
                     </view>
                     <simulatedScreenMetrics key="simulatedDestinationMetrics" type="retina47"/>
                     <connections>
-                        <outlet property="activityView" destination="4sU-Th-bIQ" id="aPJ-5A-1hM"/>
                         <outlet property="btnWidthConstraint" destination="gW2-7T-4h6" id="gL9-zt-ycz"/>
                         <outlet property="myWebView" destination="XD4-cr-q9D" id="XPQ-Wh-Ozj"/>
+                        <outlet property="progressView" destination="xVL-lU-xEF" id="aal-JM-2BL"/>
                         <outlet property="searchTextField" destination="l7O-JO-AHP" id="iI0-aS-Lyl"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="K03-ab-dBW" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="124.5" y="172.5"/>
+            <point key="canvasLocation" x="61.5" y="153.5"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="search" width="40" height="40"/>
+    </resources>
 </document>
