--- a/WebBrowser/Base.lproj/LaunchScreen.storyboard
+++ b/WebBrowser/Base.lproj/LaunchScreen.storyboard
@@ -28,7 +28,7 @@
                                 <nil key="highlightedColor"/>
                             </label>
                         </subviews>
-                        <color key="backgroundColor" red="0.0" green="0.40000000000000002" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                        <color key="backgroundColor" red="0.93725490199999995" green="0.93725490199999995" blue="0.95686274510000002" alpha="1" colorSpace="calibratedRGB"/>
                         <constraints>
                             <constraint firstItem="ryl-Ph-lxV" firstAttribute="centerX" secondItem="Ze5-6b-2t3" secondAttribute="centerX" id="VXe-Qn-zj0"/>
                             <constraint firstItem="ryl-Ph-lxV" firstAttribute="centerY" secondItem="Ze5-6b-2t3" secondAttribute="centerY" constant="-20" id="g9i-BF-7TG"/>
